<resources>
    <string name="app_name">Covid 19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="total_cases">Total Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="country">Country</string>
    <string name="filter">Filter</string>
    <string name="greaterOrEqual"><![CDATA[>=]]></string>
    <string name="lessOrEquall"><![CDATA[<=]]></string>
    <string name="refresh">Refresh</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
</resources>
