<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CovidMainScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CcTotalCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/layout_background"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/CcDeaths"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTotalCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/total_cases"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/txtTotalCases"
            app:layout_constraintStart_toStartOf="@+id/txtTotalCases"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalCases" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CcDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/layout_background"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/CcRecovered"
        app:layout_constraintStart_toEndOf="@+id/CcTotalCases"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/deaths"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/txtDeaths"
            app:layout_constraintStart_toStartOf="@+id/txtDeaths"
            app:layout_constraintTop_toBottomOf="@+id/txtDeaths" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CcRecovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/layout_background"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CcDeaths"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/recovered"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/txtRecovered"
            app:layout_constraintStart_toStartOf="@+id/txtRecovered"
            app:layout_constraintTop_toBottomOf="@+id/txtRecovered" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtCCCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/country"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/txtCTotalCases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/viewCountry"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@+id/txtCCCountry"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtCTotalCases"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/total_cases"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/txtCDeaths"
        app:layout_constraintStart_toEndOf="@+id/txtCCCountry"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/viewTotalCases"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@+id/txtCTotalCases"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtCDeaths"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/deaths"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/txtCRecovered"
        app:layout_constraintStart_toEndOf="@+id/txtCTotalCases"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/viewDeaths"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@+id/txtCDeaths"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/txtCRecovered"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/recovered"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCDeaths"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="16sp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_filter"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>